--- a/uaa/pom.xml
+++ b/uaa/pom.xml
@@ -73,6 +73,7 @@
         <jacoco.itReportFile>${jacoco.itReportFolder}/integrationTest.exec</jacoco.itReportFile>
         <junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
         <junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
+        <start-class>com.demo.uaa.UaaApp</start-class>
         <!-- jhipster-needle-maven-property -->
     </properties>
 
